# NPD_Final_Assignment

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_notebook.ipynb
data/works/Mickiewicz/: Grażyna.txt  Konrad Wallenrod.txt  Oda do młodości.txt  Pan Tadeusz.txt  Reduta Ordona.txt  Ucieczka.txt
data/works/Sienkiewicz/: Pan Wołodyjowski.txt  Quo vadis.txt
profiling/: profile.prof  profile_script.py  profiling_results.txt
src/language_analyzer/: __init__.py  analyzer.py  cli.py  constants.py
tests/: test_analyzer.py  test_cli.py
