[project]
name = "language-analyzer"
version = "0.1.0"
description = "NPD Final Assignment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
]

[project.scripts]
language-analyzer = "language_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flameprof>=0.4",
    "gprof2dot>=2025.4.14",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "notebook>=7.3.2",
    "ipykernel==6.31",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
